2012-02-02  6.7.5-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-1, SVN revision 6684.

2012-01-30  6.7.5-1 Cristy  <quetzlzacatenango@image...>
  * Support the -alpha remove option (use it to remove transparency from PDF,
    convert -density 200 apple.pdf -alpha remove x:).
  * Use union instead of casting gzFile and BZFILE.
  * Don't treat PSD user channel as alpha (patch from Dominic Benson).
  * Prevent overflow when casting short int to size_t when parsing a
    maliciously crafted image with an IFD whose all IOP tags' value offsets
    point to the beginning of the IFD itself [CVE-2012-0247].
  * Prevent DES when parsing a maliciously crafted image with an IFD whose
    all IOP tags' value offsets point to the beginning of the IFD itself
    [CVE-2012-0248].
  * Caption with Pango support no longer return a blank canvas.
  * Correct sRGB colorspace conversion equations.

2012-01-30  6.7.5-1 Glenn Randers-Pehrson <glennrp@image...>
  * Fix bug in png coder (spurious warning, reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=20257).

2012-01-28  6.7.5-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.5-0, SVN revision 6606.

2012-01-25  6.7.5-0 Cristy  <quetzlzacatenango@image...>
  * Zlib-1.2.5.2 requires gzFile cast (bug report from John Bowler).

2012-01-25  6.7.4-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-10, SVN revision 6592.

2012-01-25  6.7.4-10 Cristy  <quetzlzacatenango@image...>
  * Update PerlMagick TIFF regression signatures to match endian order.

2012-01-24  6.7.4-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-9, SVN revision 6589.

2012-01-24  6.7.4-9 Cristy  <quetzlzacatenango@image...>
  * Fix rare file link in the pixel cache.

2012-01-20  6.7.4-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-8, SVN revision 6551.

2012-01-19  6.7.4-8 Cristy  <quetzlzacatenango@image...>
  * Although MagickRealType is a double, use double for KernelInfo values in