@@ -1,3 +1,6 @@
+2012-02-03  6.7.5-2 Cristy  <quetzlzacatenango@image...>
+  * Add SyncImagePixelCache() to ensure cache morphology is consistent.
+
 2012-02-02  6.7.5-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.5-1, SVN revision 6684.
 
